# Model

./: model.py  pyproject.toml
model/: core.py
model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
